@@ -592,6 +592,6 @@ PORT gbz80_port =
   1,				/* transform >= to ! < */
   1,				/* transform != to !(a == b) */
   0,				/* leave == */
-  FALSE,                        /* No array initializer support. */
+  TRUE,                         /* Array initializer support. */
   PORT_MAGIC
 };
